Changed the stream process